--- a/LATIHAN 2 - Tugas List Nilai.ipynb
+++ b/LATIHAN 2 - Tugas List Nilai.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[35, 21, 18, 2, 92, 7, 29, 29, 61, 66, 27, 85, 89, 20, 13, 67, 13, 90, 1, 13, 23, 66, 42, 64, 59, 91, 88, 73, 30, 22, 71, 29, 86, 43, 74, 88, 48, 27, 63, 93, 53, 87, 87, 66, 92, 12, 33, 3, 41, 25, 69, 16, 38, 17, 59, 21, 35, 75, 29, 90, 21, 19, 71, 3, 15, 99, 85, 46, 1, 29, 71, 69, 46, 61, 29, 72, 37, 3, 46, 30, 72, 16, 51, 10, 56, 82, 30, 61, 93, 95, 48, 48, 49, 15, 37, 6, 71, 22, 82, 26, 77, 2, 49, 28, 92, 71, 44, 34, 88, 81, 22, 34, 84, 69, 73, 94, 45, 8, 84, 1, 7, 91, 44, 23, 21, 2, 21, 16, 32, 34, 19, 85, 49, 5, 23, 76, 93, 35, 25, 23, 66, 28, 9, 8, 89, 46, 43, 18, 69, 42, 88, 93, 82, 66, 28, 5, 69, 30, 55, 32, 61, 10, 29, 14, 95, 12, 47, 40, 21, 33, 60, 32, 93, 36, 92, 13, 37, 17, 88, 73, 4, 30, 96, 17, 81, 68, 46, 59, 37, 73, 57, 93, 41, 31, 88, 47, 70, 47, 10, 9, 32, 72, 60, 31, 51, 38, 61, 53, 96, 84, 95, 2, 23, 64, 38, 20, 83, 79, 6, 84, 22, 96, 77, 16, 10, 71, 24, 45, 95, 33, 5, 77, 33, 74, 78, 83, 96, 16, 11, 27, 33, 37, 60, 80, 44, 16, 45, 26, 13, 58]\n"
+      "[83, 78, 14, 86, 20, 98, 9, 59, 50, 12, 65, 1, 97, 30, 13, 51, 42, 74, 99, 24, 31, 83, 19, 70, 88, 36, 15, 38, 74, 21, 2, 61, 22, 16, 29, 38, 74, 48, 96, 5, 65, 32, 67, 8, 95, 24, 69, 62, 1, 24, 74, 53, 19, 99, 50, 22, 42, 93, 57, 62, 96, 4, 19, 58, 44, 77, 42, 25, 57, 64, 78, 65, 52, 18, 48, 46, 77, 99, 71, 91, 86, 70, 49, 68, 16, 70, 1, 18, 94, 54, 80, 32, 15, 33, 73, 10, 65, 31, 36, 81, 91, 1, 20, 89, 49, 49, 41, 90, 64, 91, 52, 12, 70, 97, 58, 8, 2, 22, 15, 95, 76, 47, 67, 90, 69, 55, 90, 49, 57, 16, 2, 74, 15, 87, 89, 16, 41, 93, 87, 98, 99, 93, 28, 62, 29, 31, 18, 74, 55, 5, 81, 84, 70, 44, 48, 65, 8, 33, 29, 27, 39, 53, 90, 13, 90, 26, 50, 68, 62, 85, 19, 92, 59, 93, 83, 59, 62, 15, 71, 27, 37, 24, 26, 50, 71, 80, 1, 66, 97, 44, 88, 5, 62, 47, 97, 16, 37, 26, 83, 72, 66, 43, 68, 34, 27, 96, 15, 74, 77, 79, 39, 19, 4, 44, 99, 39, 29, 9, 64, 73, 13, 71, 67, 37, 8, 87, 60, 9, 24, 82, 11, 10, 86, 8, 33, 41, 99, 52, 35, 35, 34, 91, 27, 98, 5, 11, 40, 69, 98, 12]\n"
      ]
     }
    ],
@@ -24,242 +24,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35\n",
-      "21\n",
-      "7\n",
-      "29\n",
-      "29\n",
-      "61\n",
-      "27\n",
-      "85\n",
-      "89\n",
-      "13\n",
-      "67\n",
-      "13\n",
-      "1\n",
-      "13\n",
-      "23\n",
-      "59\n",
-      "91\n",
-      "73\n",
-      "71\n",
-      "29\n",
-      "43\n",
-      "27\n",
-      "63\n",
-      "93\n",
-      "53\n",
-      "87\n",
-      "87\n",
-      "33\n",
-      "3\n",
-      "41\n",
-      "25\n",
-      "69\n",
-      "17\n",
-      "59\n",
-      "21\n",
-      "35\n",
-      "75\n",
-      "29\n",
-      "21\n",
-      "19\n",
-      "71\n",
-      "3\n",
-      "15\n",
-      "99\n",
-      "85\n",
-      "1\n",
-      "29\n",
-      "71\n",
-      "69\n",
-      "61\n",
-      "29\n",
-      "37\n",
-      "3\n",
-      "51\n",
-      "61\n",
-      "93\n",
-      "95\n",
-      "49\n",
-      "15\n",
-      "37\n",
-      "71\n",
-      "77\n",
-      "49\n",
-      "71\n",
-      "81\n",
-      "69\n",
-      "73\n",
-      "45\n",
-      "1\n",
-      "7\n",
-      "91\n",
-      "23\n",
-      "21\n",
-      "21\n",
-      "19\n",
-      "85\n",
-      "49\n",
-      "5\n",
-      "23\n",
-      "93\n",
-      "35\n",
-      "25\n",
-      "23\n",
+      "83\n",
       "9\n",
-      "89\n",
-      "43\n",
-      "69\n",
-      "93\n",
+      "59\n",
+      "65\n",
+      "1\n",
+      "97\n",
+      "13\n",
+      "51\n",
+      "99\n",
+      "31\n",
+      "83\n",
+      "19\n",
+      "15\n",
+      "21\n",
+      "61\n",
+      "29\n",
       "5\n",
+      "65\n",
+      "67\n",
+      "95\n",
+      "69\n",
+      "1\n",
+      "53\n",
+      "19\n",
+      "99\n",
+      "93\n",
+      "57\n",
+      "19\n",
+      "77\n",
+      "25\n",
+      "57\n",
+      "65\n",
+      "77\n",
+      "99\n",
+      "71\n",
+      "91\n",
+      "49\n",
+      "1\n",
+      "15\n",
+      "33\n",
+      "73\n",
+      "65\n",
+      "31\n",
+      "81\n",
+      "91\n",
+      "1\n",
+      "89\n",
+      "49\n",
+      "49\n",
+      "41\n",
+      "91\n",
+      "97\n",
+      "15\n",
+      "95\n",
+      "47\n",
+      "67\n",
       "69\n",
       "55\n",
-      "61\n",
-      "29\n",
-      "95\n",
-      "47\n",
-      "21\n",
-      "33\n",
-      "93\n",
-      "13\n",
-      "37\n",
-      "17\n",
-      "73\n",
-      "17\n",
-      "81\n",
-      "59\n",
-      "37\n",
-      "73\n",
+      "49\n",
       "57\n",
-      "93\n",
+      "15\n",
+      "87\n",
+      "89\n",
       "41\n",
+      "93\n",
+      "87\n",
+      "99\n",
+      "93\n",
+      "29\n",
       "31\n",
-      "47\n",
-      "47\n",
-      "9\n",
-      "31\n",
-      "51\n",
-      "61\n",
-      "53\n",
-      "95\n",
-      "23\n",
-      "83\n",
-      "79\n",
-      "77\n",
-      "71\n",
-      "45\n",
-      "95\n",
-      "33\n",
+      "55\n",
       "5\n",
-      "77\n",
+      "81\n",
+      "65\n",
       "33\n",
-      "83\n",
-      "11\n",
+      "29\n",
       "27\n",
-      "33\n",
+      "39\n",
+      "53\n",
+      "13\n",
+      "85\n",
+      "19\n",
+      "59\n",
+      "93\n",
+      "83\n",
+      "59\n",
+      "15\n",
+      "71\n",
+      "27\n",
       "37\n",
-      "45\n",
-      "13\n"
+      "71\n",
+      "1\n",
+      "97\n",
+      "5\n",
+      "47\n",
+      "97\n",
+      "37\n",
+      "83\n",
+      "43\n",
+      "27\n",
+      "15\n",
+      "77\n",
+      "79\n",
+      "39\n",
+      "19\n",
+      "99\n",
+      "39\n",
+      "29\n",
+      "9\n",
+      "73\n",
+      "13\n",
+      "71\n",
+      "67\n",
+      "37\n",
+      "87\n",
+      "9\n",
+      "11\n",
+      "33\n",
+      "41\n",
+      "99\n",
+      "35\n",
+      "35\n",
+      "91\n",
+      "27\n",
+      "5\n",
+      "11\n",
+      "69\n"
      ]
     }
    ],
    "source": [
     "#Nilai yang ganjil\n",
     "\n",
-    "for n in nilaitugas:\n",
-    "    if n%2==1:\n",
-    "#         print(n)"
+    "for i in nilaitugas:\n",
+    "    if i%2==1:\n",
+    "        print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "92\n",
-      "85\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "88\n",
-      "73\n",
-      "71\n",
-      "86\n",
-      "74\n",
-      "88\n",
-      "93\n",
-      "87\n",
-      "87\n",
-      "92\n",
-      "75\n",
-      "90\n",
-      "71\n",
-      "99\n",
-      "85\n",
-      "71\n",
-      "72\n",
-      "72\n",
-      "82\n",
-      "93\n",
-      "95\n",
-      "71\n",
-      "82\n",
-      "77\n",
-      "92\n",
-      "71\n",
-      "88\n",
-      "81\n",
-      "84\n",
-      "73\n",
-      "94\n",
-      "84\n",
-      "91\n",
-      "85\n",
-      "76\n",
-      "93\n",
-      "89\n",
-      "88\n",
-      "93\n",
-      "82\n",
-      "95\n",
-      "93\n",
-      "92\n",
-      "88\n",
-      "73\n",
-      "96\n",
-      "81\n",
-      "73\n",
-      "93\n",
-      "88\n",
-      "72\n",
-      "96\n",
-      "84\n",
-      "95\n",
       "83\n",
-      "79\n",
-      "84\n",
-      "96\n",
-      "77\n",
-      "71\n",
-      "95\n",
-      "77\n",
-      "74\n",
       "78\n",
+      "86\n",
+      "98\n",
+      "97\n",
+      "74\n",
+      "99\n",
       "83\n",
+      "88\n",
+      "74\n",
+      "74\n",
       "96\n",
-      "80\n"
+      "95\n",
+      "74\n",
+      "99\n",
+      "93\n",
+      "96\n",
+      "77\n",
+      "78\n",
+      "77\n",
+      "99\n",
+      "71\n",
+      "91\n",
+      "86\n",
+      "94\n",
+      "80\n",
+      "73\n",
+      "81\n",
+      "91\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "97\n",
+      "95\n",
+      "76\n",
+      "90\n",
+      "90\n",
+      "74\n",
+      "87\n",
+      "89\n",
+      "93\n",
+      "87\n",
+      "98\n",
+      "99\n",
+      "93\n",
+      "74\n",
+      "81\n",
+      "84\n",
+      "90\n",
+      "90\n",
+      "85\n",
+      "92\n",
+      "93\n",
+      "83\n",
+      "71\n",
+      "71\n",
+      "80\n",
+      "97\n",
+      "88\n",
+      "97\n",
+      "83\n",
+      "72\n",
+      "96\n",
+      "74\n",
+      "77\n",
+      "79\n",
+      "99\n",
+      "73\n",
+      "71\n",
+      "87\n",
+      "82\n",
+      "86\n",
+      "99\n",
+      "91\n",
+      "98\n",
+      "98\n"
      ]
     }
    ],
@@ -273,11 +267,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'statistics' from 'C:\\\\Users\\\\User\\\\Anaconda3\\\\lib\\\\statistics.py'>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Standar Devisiasi "
+    "#Standar Devisiasi \n",
+    "import statistics\n",
+    "statistics\n",
+    "# variance(nilaitugas, stdev)\n",
+    "# # stdev([nilaitugas])\n"
    ]
   },
   {
