--- a/Tugas mySQL #1.ipynb
+++ b/Tugas mySQL #1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,26 +69,30 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>offices</td>\n",
+       "      <td>mahasiswa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>orderdetails</td>\n",
+       "      <td>offices</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>orders</td>\n",
+       "      <td>orderdetails</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>payments</td>\n",
+       "      <td>orders</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>productlines</td>\n",
+       "      <td>payments</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>productlines</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>products</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -99,15 +103,16 @@
        "  Tables_in_classicmodels\n",
        "0               customers\n",
        "1               employees\n",
-       "2                 offices\n",
-       "3            orderdetails\n",
-       "4                  orders\n",
-       "5                payments\n",
-       "6            productlines\n",
-       "7                products"
+       "2               mahasiswa\n",
+       "3                 offices\n",
+       "4            orderdetails\n",
+       "5                  orders\n",
+       "6                payments\n",
+       "7            productlines\n",
+       "8                products"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2903,7 +2908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3441,7 +3446,7 @@
        "[273 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
