--- a/LATIHAN 2 - Tugas List Nilai.ipynb
+++ b/LATIHAN 2 - Tugas List Nilai.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[83, 78, 14, 86, 20, 98, 9, 59, 50, 12, 65, 1, 97, 30, 13, 51, 42, 74, 99, 24, 31, 83, 19, 70, 88, 36, 15, 38, 74, 21, 2, 61, 22, 16, 29, 38, 74, 48, 96, 5, 65, 32, 67, 8, 95, 24, 69, 62, 1, 24, 74, 53, 19, 99, 50, 22, 42, 93, 57, 62, 96, 4, 19, 58, 44, 77, 42, 25, 57, 64, 78, 65, 52, 18, 48, 46, 77, 99, 71, 91, 86, 70, 49, 68, 16, 70, 1, 18, 94, 54, 80, 32, 15, 33, 73, 10, 65, 31, 36, 81, 91, 1, 20, 89, 49, 49, 41, 90, 64, 91, 52, 12, 70, 97, 58, 8, 2, 22, 15, 95, 76, 47, 67, 90, 69, 55, 90, 49, 57, 16, 2, 74, 15, 87, 89, 16, 41, 93, 87, 98, 99, 93, 28, 62, 29, 31, 18, 74, 55, 5, 81, 84, 70, 44, 48, 65, 8, 33, 29, 27, 39, 53, 90, 13, 90, 26, 50, 68, 62, 85, 19, 92, 59, 93, 83, 59, 62, 15, 71, 27, 37, 24, 26, 50, 71, 80, 1, 66, 97, 44, 88, 5, 62, 47, 97, 16, 37, 26, 83, 72, 66, 43, 68, 34, 27, 96, 15, 74, 77, 79, 39, 19, 4, 44, 99, 39, 29, 9, 64, 73, 13, 71, 67, 37, 8, 87, 60, 9, 24, 82, 11, 10, 86, 8, 33, 41, 99, 52, 35, 35, 34, 91, 27, 98, 5, 11, 40, 69, 98, 12]\n"
+      "[92, 73, 70, 40, 57, 21, 84, 71, 92, 87, 49, 21, 85, 20, 31, 21, 2, 12, 59, 60, 63, 34, 55, 79, 51, 57, 17, 46, 6, 13, 22, 15, 8, 14, 27, 23, 11, 78, 26, 6, 24, 75, 92, 18, 77, 73, 42, 5, 90, 30, 50, 16, 81, 66, 7, 65, 83, 12, 81, 81, 68, 28, 67, 64, 30, 84, 86, 38, 45, 39, 50, 26, 95, 18, 93, 30, 60, 57, 42, 48, 40, 40, 52, 68, 47, 39, 82, 55, 18, 53, 26, 43, 82, 92, 54, 84, 99, 95, 94, 28, 5, 5, 5, 86, 6, 87, 93, 86, 31, 81, 66, 60, 13, 55, 12, 81, 3, 18, 80, 75, 91, 85, 34, 97, 51, 80, 72, 29, 87, 23, 60, 77, 50, 7, 68, 29, 82, 84, 77, 7, 53, 80, 44, 79, 16, 21, 10, 16, 48, 44, 85, 4, 47, 3, 22, 38, 71, 49, 17, 27, 89, 18, 51, 5, 57, 4, 46, 88, 47, 44, 21, 45, 72, 40, 22, 66, 85, 12, 60, 5, 18, 7, 54, 54, 1, 77, 48, 50, 51, 23, 50, 57, 87, 62, 33, 70, 32, 3, 75, 81, 69, 85, 58, 61, 41, 53, 37, 50, 30, 81, 36, 43, 58, 80, 58, 42, 61, 72, 13, 3, 91, 16, 10, 11, 19, 3, 32, 74, 13, 74, 4, 35, 78, 70, 33, 73, 53, 95, 45, 95, 1, 87, 98, 4, 31, 56, 77, 95, 57, 47]\n"
      ]
     }
    ],
@@ -24,140 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83\n",
-      "9\n",
-      "59\n",
-      "65\n",
-      "1\n",
-      "97\n",
-      "13\n",
-      "51\n",
-      "99\n",
-      "31\n",
-      "83\n",
-      "19\n",
-      "15\n",
-      "21\n",
-      "61\n",
-      "29\n",
-      "5\n",
-      "65\n",
-      "67\n",
-      "95\n",
-      "69\n",
-      "1\n",
-      "53\n",
-      "19\n",
-      "99\n",
-      "93\n",
-      "57\n",
-      "19\n",
-      "77\n",
-      "25\n",
-      "57\n",
-      "65\n",
-      "77\n",
-      "99\n",
-      "71\n",
-      "91\n",
-      "49\n",
-      "1\n",
-      "15\n",
-      "33\n",
-      "73\n",
-      "65\n",
-      "31\n",
-      "81\n",
-      "91\n",
-      "1\n",
-      "89\n",
-      "49\n",
-      "49\n",
-      "41\n",
-      "91\n",
-      "97\n",
-      "15\n",
-      "95\n",
-      "47\n",
-      "67\n",
-      "69\n",
-      "55\n",
-      "49\n",
-      "57\n",
-      "15\n",
-      "87\n",
-      "89\n",
-      "41\n",
-      "93\n",
-      "87\n",
-      "99\n",
-      "93\n",
-      "29\n",
-      "31\n",
-      "55\n",
-      "5\n",
-      "81\n",
-      "65\n",
-      "33\n",
-      "29\n",
-      "27\n",
-      "39\n",
-      "53\n",
-      "13\n",
-      "85\n",
-      "19\n",
-      "59\n",
-      "93\n",
-      "83\n",
-      "59\n",
-      "15\n",
-      "71\n",
-      "27\n",
-      "37\n",
-      "71\n",
-      "1\n",
-      "97\n",
-      "5\n",
-      "47\n",
-      "97\n",
-      "37\n",
-      "83\n",
-      "43\n",
-      "27\n",
-      "15\n",
-      "77\n",
-      "79\n",
-      "39\n",
-      "19\n",
-      "99\n",
-      "39\n",
-      "29\n",
-      "9\n",
-      "73\n",
-      "13\n",
-      "71\n",
-      "67\n",
-      "37\n",
-      "87\n",
-      "9\n",
-      "11\n",
-      "33\n",
-      "41\n",
-      "99\n",
-      "35\n",
-      "35\n",
-      "91\n",
-      "27\n",
-      "5\n",
-      "11\n",
-      "69\n"
+      "73,57,21,71,87,49,21,85,31,21,59,63,55,79,51,57,17,13,15,27,23,11,75,77,73,5,81,7,65,83,81,81,67,45,39,95,93,57,47,39,55,53,43,99,95,5,5,5,87,93,31,81,13,55,81,3,75,91,85,97,51,29,87,23,77,7,29,77,7,53,79,21,85,47,3,71,49,17,27,89,51,5,57,47,21,45,85,5,7,1,77,51,23,57,87,33,3,75,81,69,85,61,41,53,37,81,43,61,13,3,91,11,19,3,13,35,33,73,53,95,45,95,1,87,31,77,95,57,47,"
      ]
     }
    ],
@@ -166,94 +40,19 @@
     "\n",
     "for i in nilaitugas:\n",
     "    if i%2==1:\n",
-    "        print(i)"
+    "        print(i, end = ',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83\n",
-      "78\n",
-      "86\n",
-      "98\n",
-      "97\n",
-      "74\n",
-      "99\n",
-      "83\n",
-      "88\n",
-      "74\n",
-      "74\n",
-      "96\n",
-      "95\n",
-      "74\n",
-      "99\n",
-      "93\n",
-      "96\n",
-      "77\n",
-      "78\n",
-      "77\n",
-      "99\n",
-      "71\n",
-      "91\n",
-      "86\n",
-      "94\n",
-      "80\n",
-      "73\n",
-      "81\n",
-      "91\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "97\n",
-      "95\n",
-      "76\n",
-      "90\n",
-      "90\n",
-      "74\n",
-      "87\n",
-      "89\n",
-      "93\n",
-      "87\n",
-      "98\n",
-      "99\n",
-      "93\n",
-      "74\n",
-      "81\n",
-      "84\n",
-      "90\n",
-      "90\n",
-      "85\n",
-      "92\n",
-      "93\n",
-      "83\n",
-      "71\n",
-      "71\n",
-      "80\n",
-      "97\n",
-      "88\n",
-      "97\n",
-      "83\n",
-      "72\n",
-      "96\n",
-      "74\n",
-      "77\n",
-      "79\n",
-      "99\n",
-      "73\n",
-      "71\n",
-      "87\n",
-      "82\n",
-      "86\n",
-      "99\n",
-      "91\n",
-      "98\n",
-      "98\n"
+      "92,73,84,71,92,87,85,79,78,75,92,77,73,90,81,83,81,81,84,86,95,93,82,82,92,84,99,95,94,86,87,93,86,81,81,80,75,91,85,97,80,72,87,77,82,84,77,80,79,85,71,89,88,72,85,77,87,75,81,85,81,80,72,91,74,74,78,73,95,95,87,98,77,95,"
      ]
     }
    ],
@@ -262,7 +61,7 @@
     "\n",
     "for n in nilaitugas:\n",
     "    if n>70:\n",
-    "        print(n)"
+    "        print(n, end = ',')"
    ]
   },
   {
@@ -271,34 +70,29 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<module 'statistics' from 'C:\\\\Users\\\\User\\\\Anaconda3\\\\lib\\\\statistics.py'>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.50018671114772\n"
+     ]
     }
    ],
    "source": [
     "#Standar Devisiasi \n",
     "import statistics\n",
-    "statistics\n",
-    "# variance(nilaitugas, stdev)\n",
-    "# # stdev([nilaitugas])\n"
+    "print(sta.stdev(nilaitugas))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58\n"
+      "47\n"
      ]
     }
    ],
@@ -313,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -336,38 +130,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'statistics' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-9e39d857261e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Modus\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnilaitugas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mstatistics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnilaitugas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'statistics' is not defined"
+      "81\n"
      ]
     }
    ],
    "source": [
-    "#Modus\n"
+    "#Modus\n",
+    "import statistics as sta\n",
+    "print(sta.mode(nilaitugas))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
